test: fix all tests after refactoring - add missing mocks, remove unused methods, update assertions